--- a/style.css
+++ b/style.css
@@ -30,8 +30,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
+    border-radius: 8px 8px 0 0;
 }
 
 .content {
@@ -88,6 +87,8 @@ body {
     justify-content: center;
     cursor: pointer;
     margin-left: auto;
+    z-index: 1;
+    margin-right: 15px;
 }
 
 svg {
@@ -106,13 +107,12 @@ svg {
     position: absolute;
     background-color: hsl(217, 19%, 35%);
     display: flex;
-    justify-content: center;
     align-items: center;
-    padding: 12px 30px;
+    justify-content: flex-start;
+    padding: 20px;
     gap: 10px;
-    border-radius: 9px;
-    left: 68%;
-    bottom: 130%;
+    width: 100%;
+    border-radius: 0 0 8px 8px;
 }
 
 .hide-it {
@@ -125,15 +125,6 @@ svg {
     letter-spacing: 3px;
 }
 
-.sharebox::after {
-    content: "";
-    position: absolute;
-    top: 3rem;
-    left: 45%;
-    border: 0.8rem solid transparent;
-    border-top-color: hsl(217, 19%, 35%);
-}
-
 
 @media (min-width: 768px){
     .card {
@@ -142,16 +133,13 @@ svg {
 
     .image {
         width: 40%;
-        height: auto;
     }
 
     .image img {
         width: 100%;
         height: 100%;
         object-fit: cover;
-        border-top-left-radius: 8px;
-        border-bottom-left-radius: 8px;
-        border-top-right-radius: 0;
+        border-radius: 8px 0 0 8px;
     }
 
     .content{
@@ -160,5 +148,27 @@ svg {
 
     .content h2{
         font-size: 1.30rem;
+    }
+
+    .sharebox {
+        background-color: hsl(217, 19%, 35%);
+        padding: 12px 30px;
+        border-radius: 9px;
+        left: 63.5%;
+        bottom: 130%;
+        width: auto;
+    }
+
+    .hide-it {
+        display: none;
+    }
+
+    .sharebox::after {
+        content: "";
+        position: absolute;
+        top: 2.9rem;
+        left: 45%;
+        border: 0.8rem solid transparent;
+        border-top-color: hsl(217, 19%, 35%);
     }
 }
